# sample-ml-project

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py  model.py
notebook/: Example_Model.ipynb
